<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/editProfileButton"
                style="@style/MainTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/edit_profile"
                android:textColor="#f80"
                android:layout_alignParentStart="true">

            </TextView>

            <TextView
                android:id="@+id/logoutButton"
                style="@style/MainTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/log_out"
                android:textColor="#f08000"
                android:layout_alignParentEnd="true">

            </TextView>

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/signInLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/border_image"
                android:src="@drawable/orangebird" />

            <TextView
                android:id="@+id/profileUsername"
                style="@style/MainTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="username(name surname)" />

            <TextView
                android:id="@+id/profileMail"
                style="@style/MainTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="mail address"
                android:textColor="#888"
                android:textSize="15dp" />

            <com.example.yallp_android.ExpandableTextView
                android:id="@+id/expandableTextView"
                style="@style/MainTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#888" />

            <TextView
                android:id="@+id/seeFullBio"
                style="@style/MainTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/hide_bio"
                android:textColor="@color/colorBrown"
                android:textSize="15sp" />

        </LinearLayout>

        <ListView
            android:id="@+id/userLanguageListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</RelativeLayout>