<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp">

        <com.example.yallp_android.custom_views.ThreeDotsView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:id="@+id/three_dot_view"
            android:background="@android:color/transparent"
            android:elevation="999999dp"/>


        <LinearLayout
            android:id="@+id/signInLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp">


            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:background="@drawable/border_image"
                android:src="@drawable/orangebird" />

            <TextView
                android:id="@+id/avgRate"
                style="@style/MainTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:text="4.7"
                android:textSize="18sp"
                android:drawableRight="@drawable/star"/>

            <TextView
                android:id="@+id/profileUsername"
                style="@style/MainTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="username(name surname)" />

            <TextView
                android:id="@+id/profileMail"
                style="@style/MainTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="mail address"
                android:textColor="#888"
                android:textSize="15dp" />

            <com.example.yallp_android.custom_views.ExpandableTextView
                android:id="@+id/expandableTextView"
                style="@style/MainTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#888" />

            <TextView
                android:id="@+id/seeFullBio"
                style="@style/MainTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/hide_bio"
                android:textColor="@color/colorBrown"
                android:textSize="15sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/comments"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/gray"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/lineColor"/>

            <ImageView
                android:id="@+id/shockedImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/patrick"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/noCommentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:visibility="gone"
                android:text="@string/no_comments"/>

            <ListView
                android:id="@+id/commentList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"/>

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>